# ruleta-c-

./: CMakeLists.txt  a.out  apuesta.cpp  jugador.cpp  main.cpp  manual  manual.cpp  participante.cpp  participante.h  ruleta  ruleta.cpp  ruleta.h  test  test.cpp
include/: apuesta.h  jugador.h
src/: apuesta.cpp  jugador.cpp  participante.cpp  ruleta.cpp
